// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/picker/demo/basic.md correctly 1`] = `
<div
  class="m-picker"
>
  <div
    class="m-picker-column"
  >
    <div
      class="m-picker-column-mask"
    />
    <div
      class="m-picker-column-indicator"
    />
    <div
      class="m-picker-column-list"
    >
      <div
        class="m-picker-column-item m-picker-column-item-selected"
      >
        2015
      </div>
      <div
        class="m-picker-column-item"
      >
        2016
      </div>
      <div
        class="m-picker-column-item"
      >
        2017
      </div>
      <div
        class="m-picker-column-item"
      >
        2018
      </div>
      <div
        class="m-picker-column-item"
      >
        2019
      </div>
      <div
        class="m-picker-column-item"
      >
        2020
      </div>
      <div
        class="m-picker-column-item"
      >
        2021
      </div>
      <div
        class="m-picker-column-item"
      >
        2022
      </div>
      <div
        class="m-picker-column-item"
      >
        2023
      </div>
      <div
        class="m-picker-column-item"
      >
        2024
      </div>
      <div
        class="m-picker-column-item"
      >
        2025
      </div>
      <div
        class="m-picker-column-item"
      >
        2026
      </div>
      <div
        class="m-picker-column-item"
      >
        2027
      </div>
      <div
        class="m-picker-column-item"
      >
        2028
      </div>
      <div
        class="m-picker-column-item"
      >
        2029
      </div>
      <div
        class="m-picker-column-item"
      >
        2030
      </div>
    </div>
  </div>
  <div
    class="m-picker-column"
  >
    <div
      class="m-picker-column-mask"
    />
    <div
      class="m-picker-column-indicator"
    />
    <div
      class="m-picker-column-list"
    >
      <div
        class="m-picker-column-item m-picker-column-item-selected"
      >
        春
      </div>
      <div
        class="m-picker-column-item"
      >
        夏
      </div>
      <div
        class="m-picker-column-item"
      >
        秋
      </div>
      <div
        class="m-picker-column-item"
      >
        冬
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/picker/demo/cascade.md correctly 1`] = `
<div
  class="m-picker"
>
  <div
    class="m-picker-column"
  >
    <div
      class="m-picker-column-mask"
    />
    <div
      class="m-picker-column-indicator"
    />
    <div
      class="m-picker-column-list"
    >
      <div
        class="m-picker-column-item"
      >
        安徽省
      </div>
      <div
        class="m-picker-column-item"
      >
        澳门特别行政区
      </div>
      <div
        class="m-picker-column-item"
      >
        北京
      </div>
      <div
        class="m-picker-column-item"
      >
        广西壮族自治区
      </div>
      <div
        class="m-picker-column-item m-picker-column-item-selected"
      >
        香港特别行政区
      </div>
      <div
        class="m-picker-column-item"
      >
        浙江省
      </div>
    </div>
  </div>
  <div
    class="m-picker-column"
  >
    <div
      class="m-picker-column-mask"
    />
    <div
      class="m-picker-column-indicator"
    />
    <div
      class="m-picker-column-list"
    >
      <div
        class="m-picker-column-item"
      >
        九龙
      </div>
      <div
        class="m-picker-column-item"
      >
        香港岛
      </div>
      <div
        class="m-picker-column-item m-picker-column-item-selected"
      >
        新界
      </div>
    </div>
  </div>
  <div
    class="m-picker-column"
  >
    <div
      class="m-picker-column-mask"
    />
    <div
      class="m-picker-column-indicator"
    />
    <div
      class="m-picker-column-list"
    >
      <div
        class="m-picker-column-item"
      >
        北区
      </div>
      <div
        class="m-picker-column-item"
      >
        大埔区
      </div>
      <div
        class="m-picker-column-item"
      >
        葵青区
      </div>
      <div
        class="m-picker-column-item m-picker-column-item-selected"
      >
        离岛区
      </div>
      <div
        class="m-picker-column-item"
      >
        荃湾区
      </div>
      <div
        class="m-picker-column-item"
      >
        沙田区
      </div>
      <div
        class="m-picker-column-item"
      >
        屯门区
      </div>
      <div
        class="m-picker-column-item"
      >
        西贡区
      </div>
      <div
        class="m-picker-column-item"
      >
        元朗区
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/picker/demo/popup.md correctly 1`] = `
<div>
  <div
    style="padding:10px 16px"
  >
    <span>
      自定义弹出
    </span>
    <span>
      : 
    </span>
    <span>
      2015 春
    </span>
  </div>
  <div
    class="m-popup m-popup-bottom"
  />
  <div
    class="m-list"
  >
    <div
      class="m-list-body"
    >
      <div
        class="m-list-item m-list-item-right"
      >
        <div
          class="m-list-item-inner"
        >
          <div
            class="m-list-item-label"
          >
            <div
              class="m-list-item-title"
            >
              选择时间
            </div>
          </div>
          <div
            class="m-list-item-content"
          />
        </div>
      </div>
      <div
        class="m-popup m-popup-bottom"
      />
      <div
        class="m-list-item m-list-item-disabled m-list-item-right"
      >
        <div
          class="m-list-item-inner"
        >
          <div
            class="m-list-item-label"
          >
            <div
              class="m-list-item-title"
            >
              禁用选择
            </div>
          </div>
          <div
            class="m-list-item-content"
          >
            2015 春
          </div>
        </div>
      </div>
      <div
        class="m-popup m-popup-bottom"
      />
      <div
        class="m-list-item m-list-item-right"
      >
        <div
          class="m-list-item-inner"
        >
          <div
            class="m-list-item-label"
          >
            <div
              class="m-list-item-title"
            >
              选择城市
            </div>
          </div>
          <div
            class="m-list-item-content"
          >
            香港特别行政区 新界 离岛区
          </div>
        </div>
      </div>
      <div
        class="m-popup m-popup-bottom"
      />
    </div>
  </div>
</div>
`;
